--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,9 +14,11 @@
     "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "history": "^1.17.0",
     "path": "^0.12.7",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
+    "react-router": "^1.0.3",
     "webpack": "^1.12.12",
     "webpack-dev-server": "^1.14.1",
     "webpack-merge": "^0.7.3"
