--- a/back-end/package.json
+++ b/back-end/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.14.2",
     "express": "^4.13.4",
     "request": "^2.69.0"
   }
