--- a/front-end/package.json
+++ b/front-end/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "build": "webpack",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server --port 3000"
   },
   "author": "",
   "license": "ISC",
