--- a/back-end/package.json
+++ b/back-end/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "babel-core": "^6.5.2",
+    "babel-preset-es2015": "^6.5.0",
     "express": "^4.13.4",
     "request": "^2.69.0"
   }
